--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <version.maven-bundle-plugin>2.3.7</version.maven-bundle-plugin>
+    <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
 
     <!-- the version of the BOM, defining all the dependency versions -->
     <fabric8.version>2.2.37</fabric8.version>
@@ -123,6 +124,7 @@
       </plugin>
         <plugin>
             <artifactId>maven-resources-plugin</artifactId>
+            <version>${maven-resources-plugin.version}</version>
             <executions>
                 <execution>
                     <id>filter-extra-resources</id>
