--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
      permissions and limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
     <groupId>io.fabric8.quickstarts</groupId>
@@ -82,8 +83,8 @@
     </dependency>
 
     <dependency>
-        <groupId>io.fabric8.mq</groupId>
-        <artifactId>camel-amq</artifactId>
+      <groupId>io.fabric8.mq</groupId>
+      <artifactId>camel-amq</artifactId>
     </dependency>
 
   </dependencies>
@@ -111,60 +112,60 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <version>${version.maven-bundle-plugin}</version>
         <extensions>true</extensions>
-          <configuration>
-              <instructions>
-                  <Import-Package>
-                      io.fabric8.mq.core,
-                      io.fabric8.mq.camel,
-                      org.apache.activemq.pool,
-                      *
-                  </Import-Package>
-              </instructions>
-          </configuration>
+        <configuration>
+          <instructions>
+            <Import-Package>
+              io.fabric8.mq.core,
+              io.fabric8.mq.camel,
+              org.apache.activemq.pool,
+              *
+            </Import-Package>
+          </instructions>
+        </configuration>
       </plugin>
-        <plugin>
-            <artifactId>maven-resources-plugin</artifactId>
-            <version>${maven-resources-plugin.version}</version>
-            <executions>
-                <execution>
-                    <id>filter-extra-resources</id>
-                    <goals>
-                        <goal>copy-resources</goal>
-                    </goals>
-                    <phase>process-resources</phase>
-                    <configuration>
-                        <outputDirectory>${project.build.directory}/fabric8</outputDirectory>
-                        <resources>
-                            <resource>
-                                <directory>src/main/fabric8</directory>
-                                <filtering>true</filtering>
-                            </resource>
-                        </resources>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-        <plugin>
-            <groupId>io.fabric8</groupId>
-            <artifactId>fabric8-maven-plugin</artifactId>
-            <version>${fabric8.version}</version>
-            <executions>
-                <execution>
-                    <id>json</id>
-                    <phase>generate-resources</phase>
-                    <goals>
-                        <goal>json</goal>
-                    </goals>
-                </execution>
-                <execution>
-                    <id>attach</id>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>attach</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>${maven-resources-plugin.version}</version>
+        <executions>
+          <execution>
+            <id>filter-extra-resources</id>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <phase>process-resources</phase>
+            <configuration>
+              <outputDirectory>${project.build.directory}/fabric8</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>src/main/fabric8</directory>
+                  <filtering>true</filtering>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>io.fabric8</groupId>
+        <artifactId>fabric8-maven-plugin</artifactId>
+        <version>${fabric8.version}</version>
+        <executions>
+          <execution>
+            <id>json</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>json</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>attach</id>
+            <phase>package</phase>
+            <goals>
+              <goal>attach</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.apache.karaf.tooling</groupId>
         <artifactId>features-maven-plugin</artifactId>
@@ -214,7 +215,9 @@
                   <descriptor>${docker.assemblyDescriptor}</descriptor>
                   <basedir>/opt/jboss/deploy/</basedir>
                 </assembly>
-                <cmd><shell>/usr/bin/deploy-and-start</shell></cmd>
+                <cmd>
+                  <shell>/usr/bin/deploy-and-start</shell>
+                </cmd>
               </build>
             </image>
           </images>
@@ -223,47 +226,47 @@
     </plugins>
   </build>
 
-   <profiles>
-     <profile>
-       <id>docker-build</id>
-       <build>
-         <plugins>
-           <plugin>
-             <groupId>org.jolokia</groupId>
-             <artifactId>docker-maven-plugin</artifactId>
-             <version>${docker.maven.plugin.version}</version>
-             <executions>
-               <execution>
-                 <goals>
-                   <goal>build</goal>
-                 </goals>
-                 <phase>package</phase>
-               </execution>
-             </executions>
-           </plugin>
-         </plugins>
-       </build>
-     </profile>
-     <profile>
-       <id>docker-push</id>
-       <build>
-         <plugins>
-           <plugin>
-             <groupId>org.jolokia</groupId>
-             <artifactId>docker-maven-plugin</artifactId>
-             <version>${docker.maven.plugin.version}</version>
-             <executions>
-               <execution>
-                 <goals>
-                   <goal>build</goal>
-                   <goal>push</goal>
-                 </goals>
-                 <phase>package</phase>
-               </execution>
-             </executions>
-           </plugin>
-         </plugins>
-       </build>
-     </profile>
+  <profiles>
+    <profile>
+      <id>docker-build</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.jolokia</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+            <version>${docker.maven.plugin.version}</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>build</goal>
+                </goals>
+                <phase>package</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>docker-push</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.jolokia</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+            <version>${docker.maven.plugin.version}</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>build</goal>
+                  <goal>push</goal>
+                </goals>
+                <phase>package</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 </project>
