--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
   <artifactId>quickstart-karaf-camel-amq</artifactId>
   <version>2.2.41-SNAPSHOT</version>
   <packaging>bundle</packaging>
-  <name>Fabric8 :: Quickstarts :: Karaf :: Camel using ActiveMQ</name>
-  <description>ActiveMQ and Camel Example</description>
+  <name>Fabric8 :: Quickstarts :: Karaf :: Camel and ActiveMQ</name>
+  <description>Camel route using ActiveMQ in Karaf container</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
