Conflicts: 	quickstart/karaf/camel-log/pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-blueprint</artifactId>
+      <version>${camel.version}</version>
     </dependency>
 
     <dependency>
