Fixes #815 modify readme to use the shorthand build for deploy to fabric8

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,8 @@
     </dependencies>
   </dependencyManagement>
 
+  <!-- TODO: update to karaf 4 -->
+
   <dependencies>
     <!--
       For this example, we will be using the OSGi Blueprint XML syntax for Apache Camel.
