Update to new base image + fix with openshift auth
- Use new s2i base images 1.1.1
- Introduce env  AB_JOLOKIA_AUTH_OPENSHIFT which will be use in fabric8 deployment descriptors to switch on OpenShift SSL auth for the proxy.

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
     <docker.port.container.http>8181</docker.port.container.http>
     <fabric8.env.AMQ_SERVICE_ID>FABRIC8MQ</fabric8.env.AMQ_SERVICE_ID>
 
+    <fabric8.env.AB_JOLOKIA_AUTH_OPENSHIFT>true</fabric8.env.AB_JOLOKIA_AUTH_OPENSHIFT>
     <fabric8.label.component>${project.artifactId}</fabric8.label.component>
     <fabric8.label.container>karaf</fabric8.label.container>
     <fabric8.label.group>quickstarts</fabric8.label.group>
