--- a/pom.xml
+++ b/pom.xml
@@ -264,10 +264,10 @@
                 <from>${docker.from}</from>
                 <assembly>
                   <descriptor>${docker.assemblyDescriptor}</descriptor>
-                  <basedir>/opt/jboss/deploy/</basedir>
+                  <basedir>/deployments</basedir>
                 </assembly>
                 <cmd>
-                  <shell>/usr/bin/deploy-and-start</shell>
+                  <shell>/deployments/deploy-and-run.sh</shell>
                 </cmd>
               </build>
             </image>
