--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     <karaf.version>2.4.0.redhat-621070</karaf.version>
     <karaf.plugin.version>4.0.2.redhat-621054</karaf.plugin.version>
 
-    <docker.from>docker.io/fabric8/karaf-2.4:1.0.0</docker.from>
+    <docker.from>fabric8/s2i-karaf-rhel:1.2.1</docker.from>
     <fabric8.dockerUser>fabric8/</fabric8.dockerUser>
     <docker.image>${fabric8.dockerUser}${project.artifactId}:${project.version}</docker.image>
     <docker.assemblyDescriptor>${basedir}/src/main/fabric8/assembly.xml</docker.assemblyDescriptor>
