--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
       <artifactId>fuse-karaf-framework</artifactId>
       <version>${fuse.version}</version>
       <type>kar</type>
+      <!-- no need to download kar dependencies -->
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
