OSFUSE-178: the karaf camel-amq quickstart needs scr as the mq component uses that

--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,7 @@
           <startupFeatures>
             <feature>karaf-framework</feature>
             <feature>shell</feature>
+            <feature>scr</feature>
             <feature>jaas</feature>
             <feature>aries-blueprint</feature>
             <feature>camel-blueprint</feature>
