--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <artifactId>jboss-fuse-camel-amq</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
-  <name>Fabric8 :: Quickstarts :: Karaf :: Camel and ActiveMQ</name>
+  <name>Fabric8 :: Quickstarts :: JBoss Fuse :: Camel and ActiveMQ</name>
   <description>Camel route using ActiveMQ in Karaf container</description>
 
   <properties>
