--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
     <!-- configure the versions you want to use here -->
     <fuse.version>6.2.1.redhat-083</fuse.version>
-    <fabric8.version>2.2.0.redhat-070</fabric8.version>
+    <fabric8.version>2.2.144</fabric8.version>
     <karaf.plugin.version>4.0.2.redhat-621067</karaf.plugin.version>
 
     <!--<docker.from>jboss-fuse-6/fis-karaf-openshift:1.0</docker.from>-->
@@ -42,6 +42,10 @@
     <docker.port.container.jolokia>8778</docker.port.container.jolokia>
     <docker.port.container.http>8181</docker.port.container.http>
     <fabric8.env.A_MQ_SERVICE_NAME>broker</fabric8.env.A_MQ_SERVICE_NAME>
+    <!--
+    <fabric8.env.ACTIVEMQ_USERNAME>amq_username</fabric8.env.ACTIVEMQ_USERNAME>
+    <fabric8.env.ACTIVEMQ_PASSWORD>amq_password</fabric8.env.ACTIVEMQ_PASSWORD>
+    -->
     <fabric8.label.component>${project.artifactId}</fabric8.label.component>
     <fabric8.label.container>karaf</fabric8.label.container>
     <fabric8.label.group>quickstarts</fabric8.label.group>
@@ -128,8 +132,6 @@
         <configuration>
           <instructions>
             <Import-Package>
-              io.fabric8.mq.core,
-              io.fabric8.mq.camel,
               org.apache.activemq.pool,
               *
             </Import-Package>
@@ -217,12 +219,10 @@
             <feature>camel-jms</feature>
             <feature>activemq-camel</feature>
             <feature>camel-blueprint</feature>
+            <feature>activemq-client</feature>
           </startupFeatures>
           <startupBundles>
-            <bundle>mvn:io.fabric8.mq/camel-amq/${fabric8.version}</bundle>
-            <bundle>mvn:io.fabric8.mq/mq-client/${fabric8.version}</bundle>
-            <bundle>mvn:io.fabric8/fabric8-utils/${fabric8.version}</bundle>
-
+            <bundle>mvn:io.fabric8/fabric8-karaf/${fabric8.version}</bundle>
             <bundle>mvn:${project.groupId}/${project.artifactId}/${project.version}</bundle>
           </startupBundles>
         </configuration>
