--- a/pom.xml
+++ b/pom.xml
@@ -29,29 +29,20 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <version.maven-bundle-plugin>2.3.7</version.maven-bundle-plugin>
-
 
     <!-- configure the versions you want to use here -->
-    <fuse.version>6.2.1.redhat-083</fuse.version>
+    <fuse.version>6.2.1.redhat-117</fuse.version>
     <fabric8.version>2.2.145</fabric8.version>
+    <fabric8.kubernetes.version>1.4.1</fabric8.kubernetes.version>
     <karaf.plugin.version>4.0.2.redhat-621067</karaf.plugin.version>
 
-    <!--<docker.from>jboss-fuse-6/fis-karaf-openshift:1.0</docker.from>-->
-    <docker.from>fabric8/s2i-karaf:1.2</docker.from>
-    <docker.port.container.jolokia>8778</docker.port.container.jolokia>
-    <docker.port.container.http>8181</docker.port.container.http>
-    <fabric8.env.A_MQ_SERVICE_NAME>broker</fabric8.env.A_MQ_SERVICE_NAME>
-    <!--
-    <fabric8.env.ACTIVEMQ_USERNAME>amq_username</fabric8.env.ACTIVEMQ_USERNAME>
-    <fabric8.env.ACTIVEMQ_PASSWORD>amq_password</fabric8.env.ACTIVEMQ_PASSWORD>
-    -->
-
     <!-- maven plugin versions -->
-    <fabric8.maven.plugin.version>3.1.4</fabric8.maven.plugin.version>
     <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
     <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
-    <exec-maven-plugin.version>1.4.0</exec-maven-plugin.version>
+    <maven-bundle-plugin.version>2.3.7</maven-bundle-plugin.version>
+    <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
+    <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
+    <fabric8.maven.plugin.version>3.1.4</fabric8.maven.plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -99,6 +90,13 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>io.fabric8.kubernetes</groupId>
+      <artifactId>kubernetes-karaf</artifactId>
+      <version>${fabric8.kubernetes.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
   </dependencies>
 
   <build>
@@ -113,17 +111,19 @@
     <plugins>
       <!-- Compiler plugin enforces Java 1.8 compatibility and activates annotation processors -->
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.3</version>
+        <version>${maven-compiler-plugin.version}</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
       </plugin>
+
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>${version.maven-bundle-plugin}</version>
+        <version>${maven-bundle-plugin.version}</version>
         <extensions>true</extensions>
         <configuration>
           <instructions>
@@ -134,9 +134,11 @@
           </instructions>
         </configuration>
       </plugin>
+
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>2.7</version>
+        <version>${maven-resources-plugin.version}</version>
         <executions>
           <execution>
             <id>filter-extra-resources</id>
@@ -162,7 +164,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
-        <version>2.5.2</version>
+        <version>${maven-install-plugin.version}</version>
         <executions>
           <execution>
             <id>default-install</id>
@@ -201,10 +203,9 @@
           <!-- we are using karaf 2.4.x -->
           <karafVersion>v24</karafVersion>
           <useReferenceUrls>true</useReferenceUrls>
-          <archiveTarGz>false</archiveTarGz>
-          <!-- do not include build output directory -->
+          <archiveTarGz>true</archiveTarGz>
+          <archiveZip>false</archiveZip>
           <includeBuildOutputDirectory>false</includeBuildOutputDirectory>
-          <!-- no startupFeatures -->
           <startupFeatures>
             <feature>karaf-framework</feature>
             <feature>shell</feature>
@@ -216,10 +217,12 @@
             <feature>activemq-camel</feature>
             <feature>camel-blueprint</feature>
             <feature>activemq-client</feature>
+            <feature>kubernetes-client</feature>
+            <feature>openshift-client</feature>
           </startupFeatures>
           <startupBundles>
-            <bundle>mvn:io.fabric8/fabric8-karaf/${fabric8.version}</bundle>
-            <bundle>mvn:${project.groupId}/${project.artifactId}/${project.version}</bundle>
+            <bundle>mvn:io.fabric8/fabric8-karaf/${fabric8.version};start-level=60</bundle>
+            <bundle>mvn:${project.groupId}/${project.artifactId}/${project.version};start-level=80</bundle>
           </startupBundles>
         </configuration>
       </plugin>
@@ -228,37 +231,7 @@
       <plugin>
         <groupId>io.fabric8</groupId>
         <artifactId>fabric8-maven-plugin</artifactId>
-        <version>${fabric8.maven.plugin.version}</version>
-        <configuration>
-          <images>
-            <image>
-              <name>${project.artifactId}:${project.version}</name>
-              <alias>${project.artifactId}</alias>
-              <build>
-                <from>${docker.from}</from>
-                <assembly>
-                  <basedir>/deployments</basedir>
-                  <user>jboss:jboss:jboss</user>
-                  <inline xmlns="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2"
-                          xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2 http://maven.apache.org/xsd/assembly-1.1.2.xsd">
-                    <id>${project.artifactId}</id>
-                    <files>
-                      <!-- copy karaf archive -->
-                      <file>
-                        <source>${project.build.directory}/${project.artifactId}-${project.version}.zip</source>
-                        <outputDirectory>/</outputDirectory>
-                        <fileMode>0644</fileMode>
-                      </file>
-                    </files>
-                  </inline>
-                </assembly>
-                <cmd>
-                  <shell>/deployments/deploy-and-run.sh</shell>
-                </cmd>
-              </build>
-            </image>
-          </images>
-        </configuration>
+        <version>${fabric8.maven.plugin.version}</version>        
         <executions>
           <execution>
             <id>generate-resource</id>
@@ -278,5 +251,90 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>fusesource.repo</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <repositories>
+        <repository>
+          <id>fusesource.m2</id>
+          <name>FuseSource Community Release Repository</name>
+          <url>https://repo.fusesource.com/nexus/content/groups/public</url>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </releases>
+        </repository>
+        <repository>
+          <id>fusesource.ea</id>
+          <name>FuseSource Community Early Access Release Repository</name>
+          <url>https://repo.fusesource.com/nexus/content/groups/ea</url>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </releases>
+        </repository>
+        <repository>
+          <id>redhat.ga</id>
+          <name>Red Hat General Availability Repository</name>
+          <url>https://maven.repository.redhat.com/ga</url>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </releases>
+        </repository>
+      </repositories>
+      <pluginRepositories>
+        <pluginRepository>
+          <id>fusesource.m2</id>
+          <name>FuseSource Community Release Repository</name>
+          <url>https://repo.fusesource.com/nexus/content/groups/public</url>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </releases>
+        </pluginRepository>
+        <pluginRepository>
+          <id>fusesource.ea</id>
+          <name>FuseSource Community Early Access Release Repository</name>
+          <url>https://repo.fusesource.com/nexus/content/groups/ea</url>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </releases>
+        </pluginRepository>
+        <pluginRepository>
+          <id>redhat.ga</id>
+          <name>Red Hat General Availability Repository</name>
+          <url>https://maven.repository.redhat.com/ga</url>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </releases>
+        </pluginRepository>
+      </pluginRepositories>
+    </profile>
+  </profiles>
 
 </project>
