Migrated to using zip archive

--- a/pom.xml
+++ b/pom.xml
@@ -203,8 +203,7 @@
           <!-- we are using karaf 2.4.x -->
           <karafVersion>v24</karafVersion>
           <useReferenceUrls>true</useReferenceUrls>
-          <archiveTarGz>true</archiveTarGz>
-          <archiveZip>false</archiveZip>
+          <archiveTarGz>false</archiveTarGz>
           <includeBuildOutputDirectory>false</includeBuildOutputDirectory>
           <startupFeatures>
             <feature>karaf-framework</feature>
