--- a/src/main/fabric8/deployment.yml
+++ b/src/main/fabric8/deployment.yml
@@ -3,7 +3,15 @@ spec:
   template:
     spec:
       containers:
-        - env:
+        - 
+          resources:
+            requests:
+              cpu: "0.2"
+              memory: 1.5G
+            limits:
+              cpu: "0.4"
+              memory: 2G
+          env:
           - name: ACTIVEMQ_SERVICE_NAME
             value: activemq
           - name: ACTIVEMQ_USERNAME
