Show how to enable debugging for camel, but don't enable by default

--- a/src/main/resources/assembly/etc/org.ops4j.pax.logging.cfg
+++ b/src/main/resources/assembly/etc/org.ops4j.pax.logging.cfg
@@ -18,10 +18,12 @@
 ################################################################################
 
 # Root logger
-# Set logging level to DEBUG, instead of default INFO to demonstrate how to customize log levels
 # NOTE: Keep the ', out,' portion intact as it's overwritten by s2i-karaf to use stdout instead in Docker
-log4j.rootLogger=DEBUG, out, osgi:*
+log4j.rootLogger=INFO, out, osgi:*
 log4j.throwableRenderer=org.apache.log4j.OsgiThrowableRenderer
+
+# uncomment the next line to debug Camel
+#log4j.logger.org.apache.camel=DEBUG
 
 # CONSOLE appender not used by default
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
