--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>Fabric8 :: Quickstarts :: JBoss Fuse :: Camel and ActiveMQ</name>
-  <description>Camel route using ActiveMQ in Karaf container</description>
+  <description>Karaf example running a Camel route connecting to ActiveMQ</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
