--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.fabric8.quickstarts</groupId>
-  <artifactId>jboss-fuse-camel-amq</artifactId>
+  <artifactId>karaf2-camel-amq</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
-  <name>Fabric8 :: Quickstarts :: JBoss Fuse :: Camel and ActiveMQ</name>
-  <description>Karaf example running a Camel route connecting to ActiveMQ</description>
+  <name>Fabric8 :: Quickstarts :: Karaf 2 :: Camel and ActiveMQ</name>
+  <description>Karaf 2 example running a Camel route connecting to ActiveMQ</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
