OSFUSE-522: karaf2-camel-amq, spring-boot-camel-amq default ACTIVEMQ_SERVICE_NAME should be broker-amq-tcp

--- a/src/main/fabric8/deployment.yml
+++ b/src/main/fabric8/deployment.yml
@@ -13,7 +13,7 @@ spec:
               memory: 512Mi
           env:
           - name: ACTIVEMQ_SERVICE_NAME
-            value: activemq
+            value: broker-amq-tcp
           - name: ACTIVEMQ_USERNAME
             value: admin
           - name: ACTIVEMQ_PASSWORD
