--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <!-- configure the versions you want to use here -->
+    <fuse.version>6.3.0.redhat-187</fuse.version>
     <fabric8.version>2.2.211</fabric8.version>
     <karaf.plugin.version>4.0.7</karaf.plugin.version>
 
@@ -78,6 +79,7 @@
       and the feature repo itself is not added in etc/org.apache.karaf.features.cfg file -->
       <groupId>org.jboss.fuse</groupId>
       <artifactId>fuse-karaf-framework</artifactId>
+      <version>${fuse.version}</version>
       <type>kar</type>
       <!-- no need to download kar dependencies -->
       <exclusions>
