--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <!-- configure the versions you want to use here -->
-    <fabric8.version>2.3.2</fabric8.version>
+    <fabric8.version>2.2.170.redhat-000013</fabric8.version>
     <karaf.plugin.version>4.0.6</karaf.plugin.version>
 
     <!-- maven plugin versions -->
@@ -40,7 +40,7 @@
     <maven-bundle-plugin.version>2.3.7</maven-bundle-plugin.version>
     <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
     <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
-    <fabric8.maven.plugin.version>3.5.17</fabric8.maven.plugin.version>
+    <fabric8.maven.plugin.version>3.1.80.redhat-000013</fabric8.maven.plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -55,6 +55,19 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
+  <repositories>
+    <repository>
+      <id>org.jboss.fuse.bom</id>
+      <url>https://maven.repository.redhat.com/ga/</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>org.jboss.fuse.bom</id>
+      <url>https://maven.repository.redhat.com/ga/</url>
+    </pluginRepository>
+  </pluginRepositories>
 
   <dependencies>
     <!--
